# claude_trading_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  requirements.txt  todo.md
.claude/: settings.json
config/: approved_modes.yaml  risk_limits.yaml  routine_schedule.yaml  strategy_rules.yaml  watchlist.yaml
docs/: commit_messages.md  historical_universe_methodology.md  incident_response.md  model_limitations.md  operator_runbook.md  risk_profile.md
lib/: __init__.py  archive.py  backtest.py  broker.py  config.py  data.py  fills.py  historical_membership.py  historical_universe.py  indicators.py  live_trading_gate.py  notify.py  operating_mode.py  paper_monitor.py  paper_sim.py  phase2_gate.py  portfolio_health.py  portfolio_risk.py  routine_audit.py  signal_consolidator.py  signals.py  snapshots.py  symbol_history.py  walk_forward.py
scripts/: archive_routine_logs.py  bootstrap_env.sh  check_phase2_gate.py  news_probe.py  paper_trading_monitor.py  run_2008_backtest.py  run_backtest.py  run_cb_threshold_stability.py  run_multi_strategy_backtest.py  run_param_sweep.py  run_sma_stability.py  run_survivor_bias_stress.py  run_walk_forward.py  sync_alpaca_state.py  validate_moc_signal_proxy.py  yfinance_sweep.py
tests/: run_schema_validation.py  test_archive.py  test_backtest_fill_timing.py  test_broker.py  test_data.py  test_historical_membership.py  test_historical_universe.py  test_live_trading_gate.py  test_multi_strategy_backtest_entry.py  test_news_probe.py  test_notify.py  test_operating_mode.py  test_paper_monitor.py  test_signals.py  (+11 more)
(+507 files in other folders)
