[project]
name = "calm-turtle"
version = "0.1.0"
description = "Claude-native sector-ETF rotation paper-trading system. Capital preservation > clever trades."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A", "RET", "SIM"]
ignore = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
